--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: "Roboto", sans-serif;
+    font-family: "Dancing Script", cursive;
 }
 /*     font-family: 'Dancing Script', cursive;
 
