--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,15 @@ body {
     font-weight: 400;
     color: #fff;
 }
-h1,
+h1 {
+    font-family: "Dancing Script", cursive;
+}
 h2,
 h3,
 h4,
 h5,
 h6 {
-    font-family: "Dancing Script", cursive;
+    font-family: "Roboto", sans-serif;
 }
 /*     font-family: 'Dancing Script', cursive;
 
